# beetlebot_software

./: .gitignore  Doxyfile  LICENSE  README.md  build_docs
bb_computation/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  FUTURE_ROB_READ.txt  mainpage.dox  package.xml  rosdoc.yaml
bb_computation/lib/: cue.cpp  icm.cpp
bb_computation/msg/: .vm_command.msg.un~  cue_vector.msg
bb_computation/scripts/: dict_key_definitions.py  erm_test  extended_ring_model.py  mt_experiment
bb_computation/src/: #mono_directional_prompt_node.cpp#  #pi_node.cpp#  .#mono_directional_prompt_node.cpp  cue_manager.cpp  cx_model.cpp  heading_from_odom.cpp  menotaxis_node.cpp  mono_directional_prompt_node.cpp  pi_node.cpp  test_cue_subscriber.cpp  test_cx_subscriber.cpp  test_mmcx_subscriber.cpp  test_vmcx_subscriber.cpp
bb_detection/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml
bb_detection/launch/: detection.launch
bb_detection/lib/: #cue.cpp#  #icm.cpp#  cue.cpp  cv_cue.cpp  icm.cpp
bb_detection/scripts/: pol_sensor_decode.cpp
bb_detection/src/: #pol_op_recording.cpp#  .#cue_calibration.cpp  cue_calibration.cpp  intensity_cue_detector.cpp  mono_directional_prompt_node.cpp  multi_pol_op_recorder.cpp  offline_pol_sensor_recorder.cpp  pol_cue_detector.cpp  pol_op_recording.cpp  pol_sensor_decode.cpp  pol_sensor_recorder.cpp  wind_cue_detector.cpp
bb_dummy/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml
bb_dummy/src/: dummy_cue.cpp
bb_graphics/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml
bb_graphics/scripts/: #solar_vector_decode.py#  CX_graphing.py  PD_plot_all.py  PD_read.py  VMCX_graphing.py  arm_test.txt  cx_status  erm_status  erm_visualisation.py  erm_w_steering  evris_method.py  integration_status  integration_status.py  listener.py  plot.py  plot_solar_vector.py  sdp_turtlebot_arm_node.py  solar_vector_decode.py  talker.py  vmcx_status
bb_improc/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml
bb_improc/launch/: green_pipeline.launch
bb_improc/msg/: centroid_vector.msg
bb_improc/src/: #blue_channel_node.cpp#  #image_mask_node.cpp#  blue_channel_node.cpp  gaussian_blur_node.cpp  green_channel_node.cpp  image_mask_node.cpp  image_subscriber_template.cpp  raspicam_test_node.cpp  raw_pub_node.cpp
bb_launchers/: CMakeLists.txt  mainpage.dox  package.xml
bb_launchers/launch/: beetle_001.bag  beetle_002.bag  beetle_003.bag  beetle_004.bag  bprops_test.launch  ci_dummy.launch  ci_robot.launch  cv_chain.launch  dummy.launch  mirror_dummy.launch  mt_dummy.launch  mt_robot.launch  noco.launch  pi_demo.launch  pi_imu_demo.launch  robot_ci_demo.launch  sim_ci_demo.launch  tentcam.launch  tuning.launch  vm_demo.launch  vm_imu_demo.launch
bb_locomotion/: #CMakeLists.txt#  CMakeLists.txt  mainpage.dox  package.xml
bb_locomotion/include/bb_locomotion/: command.h
bb_locomotion/src/: cmd_vel_service.cpp  presets.cpp  wakeup.cpp
bb_locomotion/srv/: velocity.srv
bb_util/: #CMakeLists.txt#  CMakeLists.txt  mainpage.dox  mainpage.dox~  package.xml  rosdoc.yaml  rosdoc.yaml~
bb_util/include/bb_util/: #bb_util.h#  #cue.hpp#  #vector.hpp#  .#bb_util.h  .#cue.hpp  .#vector.hpp  argparse.h  bb_util.h  cue.hpp  vector.hpp
bb_util/include/db_util/: cue.hpp
bb_util/msg/: cue_msg.msg  encoding_status.msg  erm_status.msg  polar_vector.msg  polar_vector_list.msg  ring_mapping.msg  test_population.msg  vec2d_msg.msg
bb_util/src/: lib_bb_util.cpp  libdbutil.cpp  yaw.cpp
db_computation/: CMakeLists.txt  package.xml
db_computation/lib/: cue.cpp  icm.cpp
db_computation/src/: cue_manager.cpp  mono_directional_prompt_node.cpp  test_cue_subscriber.cpp  test_cx_subscriber.cpp  test_mmcx_subscriber.cpp  test_vmcx_subscriber.cpp
db_computation/srv/: vm_command.srv
db_image_processing/: CMakeLists.txt
db_image_processing/src/: #centre_of_mass_node.cpp#  blue_channel_node.cpp  image_subscriber_template.cpp
db_util/msg/: cue_list.msg  cx_activity.msg  mmcx_activity.msg  vmcx_activity.msg
db_util/srv/: locomotion_cmd.srv  motor_cmd.srv
doc/: manifest.yaml
doc/html/: dir_def4f5084295595db076378b986767e6.html  dir_df456cf6fda92e2520fe159856c079c1.html  dummy__cue_8cpp.html  dummy__cue_8cpp__incl.map  dummy__cue_8cpp_source.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  mainpage_8dox.html
dummy/: CMakeLists.txt  package.xml
dummy/src/: dummy_cue.cpp
norm/filter/: 1.bag  (+2 more)
(+479 files in other folders)
